--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@vercel/kv": "^3.0.0",
     "dotenv": "^17.2.2",
     "leaflet": "^1.9.4",
+    "leo-profanity": "^1.8.0",
     "vue": "^3.5.18",
     "vue-router": "^4.5.1"
   },
